--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django = "~=2.2"
 django-webpack-loader = "~=0.6"
 django-static-jquery = "==2.1.4"
 requests = "~=2.22"
+django-heroku = "~=0.3"
 
 [requires]
 python_version = "3.7"
