--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "image-webpack-loader": "^6.0.0",
+    "moment": "^2.24.0",
     "path": "^0.12.7",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
