--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 version: '3'
 services:
   web:
-    build: .
+    build:
+      context: .
+      args:
+        PORT: 8000
     volumes:
       - .:/app
     ports:
-      - "8000:8000"
+      - "3000:8000"
+    env_file: .env
