Now the docker-compose file also starts the webpack file watcher so it can be used during development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   web:
+    command: bash -c "gunicorn dondeestas.wsgi --daemon --bind 0.0.0.0:8000 --log-file - && npm run build-dev"
     build:
       context: .
       args:
